--- a/genindex.html
+++ b/genindex.html
@@ -147,9 +147,15 @@
 </li>
         <li><a href="generated/pathpy.Path.html#pathpy.Path.__init__">(pathpy.Path method)</a>
 </li>
+        <li><a href="generated/pathpy.processes.epidemic_spreading.EpidemicSIR.html#pathpy.processes.epidemic_spreading.EpidemicSIR.__init__">(pathpy.processes.epidemic_spreading.EpidemicSIR method)</a>
+</li>
+        <li><a href="generated/pathpy.processes.process.BaseProcess.html#pathpy.processes.process.BaseProcess.__init__">(pathpy.processes.process.BaseProcess method)</a>
+</li>
         <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.__init__">(pathpy.processes.random_walk.RandomWalk method)</a>
 </li>
         <li><a href="generated/pathpy.processes.random_walk.VoseAliasSampling.html#pathpy.processes.random_walk.VoseAliasSampling.__init__">(pathpy.processes.random_walk.VoseAliasSampling method)</a>
+</li>
+        <li><a href="generated/pathpy.processes.sampling.VoseAliasSampling.html#pathpy.processes.sampling.VoseAliasSampling.__init__">(pathpy.processes.sampling.VoseAliasSampling method)</a>
 </li>
         <li><a href="generated/pathpy.statistics.subpaths.SubPathCollection.html#pathpy.statistics.subpaths.SubPathCollection.__init__">(pathpy.statistics.subpaths.SubPathCollection method)</a>
 </li>
@@ -197,6 +203,10 @@
 
 <h2 id="B">B</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="generated/pathpy.processes.process.BaseProcess.html#pathpy.processes.process.BaseProcess">BaseProcess (class in pathpy.processes.process)</a>
+</li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/pathpy.algorithms.centralities.betweenness_centrality.html#pathpy.algorithms.centralities.betweenness_centrality">betweenness_centrality() (in module pathpy.algorithms.centralities)</a>
 
@@ -330,6 +340,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/pathpy.Path.end.html#pathpy.Path.end">end() (pathpy.Path property)</a>
 </li>
+      <li><a href="generated/pathpy.processes.epidemic_spreading.EpidemicSIR.html#pathpy.processes.epidemic_spreading.EpidemicSIR">EpidemicSIR (class in pathpy.processes.epidemic_spreading)</a>
+</li>
       <li><a href="generated/pathpy.generators.random_graphs.ER_nm.html#pathpy.generators.random_graphs.ER_nm">ER_nm() (in module pathpy.generators.random_graphs)</a>
 </li>
       <li><a href="generated/pathpy.generators.random_graphs.ER_nm_randomize.html#pathpy.generators.random_graphs.ER_nm_randomize">ER_nm_randomize() (in module pathpy.generators.random_graphs)</a>
@@ -396,10 +408,16 @@
 </li>
       <li><a href="generated/pathpy.statistics.subpaths.SubPathCollection.html#pathpy.statistics.subpaths.SubPathCollection.index">index() (pathpy.statistics.subpaths.SubPathCollection property)</a>
 </li>
+      <li><a href="generated/pathpy.processes.epidemic_spreading.EpidemicSIR.html#pathpy.processes.epidemic_spreading.EpidemicSIR.init">init() (pathpy.processes.epidemic_spreading.EpidemicSIR method)</a>
+
+      <ul>
+        <li><a href="generated/pathpy.processes.process.BaseProcess.html#pathpy.processes.process.BaseProcess.init">(pathpy.processes.process.BaseProcess method)</a>
+</li>
+        <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.init">(pathpy.processes.random_walk.RandomWalk method)</a>
+</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.init">init() (pathpy.processes.random_walk.RandomWalk method)</a>
-</li>
       <li><a href="generated/pathpy.Network.is_connected.html#pathpy.Network.is_connected">is_connected() (pathpy.Network property)</a>
 </li>
       <li><a href="generated/pathpy.generators.random_graphs.is_graphic_Erdos_Gallai.html#pathpy.generators.random_graphs.is_graphic_Erdos_Gallai">is_graphic_Erdos_Gallai() (in module pathpy.generators.random_graphs)</a>
@@ -508,7 +526,15 @@
 </li>
         <li><a href="generated/pathpy.io.sql.html#module-pathpy.io.sql">pathpy.io.sql</a>
 </li>
+        <li><a href="generated/pathpy.processes.html#module-pathpy.processes">pathpy.processes</a>
+</li>
+        <li><a href="generated/pathpy.processes.epidemic_spreading.html#module-pathpy.processes.epidemic_spreading">pathpy.processes.epidemic_spreading</a>
+</li>
+        <li><a href="generated/pathpy.processes.process.html#module-pathpy.processes.process">pathpy.processes.process</a>
+</li>
         <li><a href="generated/pathpy.processes.random_walk.html#module-pathpy.processes.random_walk">pathpy.processes.random_walk</a>
+</li>
+        <li><a href="generated/pathpy.processes.sampling.html#module-pathpy.processes.sampling">pathpy.processes.sampling</a>
 </li>
         <li><a href="generated/pathpy.statistics.clustering.html#module-pathpy.statistics.clustering">pathpy.statistics.clustering</a>
 </li>
@@ -553,8 +579,14 @@
 </li>
       <li><a href="generated/pathpy.Node.html#pathpy.Node">Node (class in pathpy)</a>
 </li>
-      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.node_state">node_state() (pathpy.processes.random_walk.RandomWalk method)</a>
+      <li><a href="generated/pathpy.processes.epidemic_spreading.EpidemicSIR.html#pathpy.processes.epidemic_spreading.EpidemicSIR.node_state">node_state() (pathpy.processes.epidemic_spreading.EpidemicSIR method)</a>
+
+      <ul>
+        <li><a href="generated/pathpy.processes.process.BaseProcess.html#pathpy.processes.process.BaseProcess.node_state">(pathpy.processes.process.BaseProcess method)</a>
 </li>
+        <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.node_state">(pathpy.processes.random_walk.RandomWalk method)</a>
+</li>
+      </ul></li>
       <li><a href="generated/pathpy.Edge.nodes.html#pathpy.Edge.nodes">nodes() (pathpy.Edge property)</a>
 
       <ul>
@@ -694,8 +726,6 @@
         <li><a href="generated/pathpy.io.graphtool.html#module-pathpy.io.graphtool">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     pathpy.io.konect
 
@@ -710,6 +740,8 @@
         <li><a href="generated/pathpy.io.pandas.html#module-pathpy.io.pandas">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     pathpy.io.sql
 
@@ -718,10 +750,38 @@
 </li>
       </ul></li>
       <li>
+    pathpy.processes
+
+      <ul>
+        <li><a href="generated/pathpy.processes.html#module-pathpy.processes">module</a>
+</li>
+      </ul></li>
+      <li>
+    pathpy.processes.epidemic_spreading
+
+      <ul>
+        <li><a href="generated/pathpy.processes.epidemic_spreading.html#module-pathpy.processes.epidemic_spreading">module</a>
+</li>
+      </ul></li>
+      <li>
+    pathpy.processes.process
+
+      <ul>
+        <li><a href="generated/pathpy.processes.process.html#module-pathpy.processes.process">module</a>
+</li>
+      </ul></li>
+      <li>
     pathpy.processes.random_walk
 
       <ul>
         <li><a href="generated/pathpy.processes.random_walk.html#module-pathpy.processes.random_walk">module</a>
+</li>
+      </ul></li>
+      <li>
+    pathpy.processes.sampling
+
+      <ul>
+        <li><a href="generated/pathpy.processes.sampling.html#module-pathpy.processes.sampling">module</a>
 </li>
       </ul></li>
       <li>
@@ -766,6 +826,10 @@
 </li>
         <li><a href="generated/pathpy.Network.plot.html#pathpy.Network.plot">(pathpy.Network method)</a>
 </li>
+        <li><a href="generated/pathpy.processes.epidemic_spreading.EpidemicSIR.html#pathpy.processes.epidemic_spreading.EpidemicSIR.plot">(pathpy.processes.epidemic_spreading.EpidemicSIR method)</a>
+</li>
+        <li><a href="generated/pathpy.processes.process.BaseProcess.html#pathpy.processes.process.BaseProcess.plot">(pathpy.processes.process.BaseProcess method)</a>
+</li>
         <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.plot">(pathpy.processes.random_walk.RandomWalk method)</a>
 </li>
       </ul></li>
@@ -797,8 +861,14 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.random_seed">random_seed() (pathpy.processes.random_walk.RandomWalk method)</a>
+      <li><a href="generated/pathpy.processes.epidemic_spreading.EpidemicSIR.html#pathpy.processes.epidemic_spreading.EpidemicSIR.random_seed">random_seed() (pathpy.processes.epidemic_spreading.EpidemicSIR method)</a>
+
+      <ul>
+        <li><a href="generated/pathpy.processes.process.BaseProcess.html#pathpy.processes.process.BaseProcess.random_seed">(pathpy.processes.process.BaseProcess method)</a>
 </li>
+        <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.random_seed">(pathpy.processes.random_walk.RandomWalk method)</a>
+</li>
+      </ul></li>
       <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk">RandomWalk (class in pathpy.processes.random_walk)</a>
 </li>
       <li><a href="generated/pathpy.algorithms.centralities.rank_centralities.html#pathpy.algorithms.centralities.rank_centralities">rank_centralities() (in module pathpy.algorithms.centralities)</a>
@@ -847,8 +917,14 @@
 </li>
       <li><a href="generated/pathpy.Network.remove_nodes.html#pathpy.Network.remove_nodes">remove_nodes() (pathpy.Network method)</a>
 </li>
-      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.run_experiment">run_experiment() (pathpy.processes.random_walk.RandomWalk method)</a>
+      <li><a href="generated/pathpy.processes.epidemic_spreading.EpidemicSIR.html#pathpy.processes.epidemic_spreading.EpidemicSIR.run_experiment">run_experiment() (pathpy.processes.epidemic_spreading.EpidemicSIR method)</a>
+
+      <ul>
+        <li><a href="generated/pathpy.processes.process.BaseProcess.html#pathpy.processes.process.BaseProcess.run_experiment">(pathpy.processes.process.BaseProcess method)</a>
 </li>
+        <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.run_experiment">(pathpy.processes.random_walk.RandomWalk method)</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -856,25 +932,47 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/pathpy.processes.random_walk.VoseAliasSampling.html#pathpy.processes.random_walk.VoseAliasSampling.sample">sample() (pathpy.processes.random_walk.VoseAliasSampling method)</a>
+
+      <ul>
+        <li><a href="generated/pathpy.processes.sampling.VoseAliasSampling.html#pathpy.processes.sampling.VoseAliasSampling.sample">(pathpy.processes.sampling.VoseAliasSampling method)</a>
 </li>
+      </ul></li>
       <li><a href="generated/pathpy.Network.shape.html#pathpy.Network.shape">shape() (pathpy.Network property)</a>
 </li>
       <li><a href="generated/pathpy.algorithms.shortest_paths.shortest_path_tree.html#pathpy.algorithms.shortest_paths.shortest_path_tree">shortest_path_tree() (in module pathpy.algorithms.shortest_paths)</a>
 </li>
-      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.simulation_run">simulation_run() (pathpy.processes.random_walk.RandomWalk method)</a>
+      <li><a href="generated/pathpy.processes.epidemic_spreading.EpidemicSIR.html#pathpy.processes.epidemic_spreading.EpidemicSIR.simulation_run">simulation_run() (pathpy.processes.epidemic_spreading.EpidemicSIR method)</a>
+
+      <ul>
+        <li><a href="generated/pathpy.processes.process.BaseProcess.html#pathpy.processes.process.BaseProcess.simulation_run">(pathpy.processes.process.BaseProcess method)</a>
 </li>
+        <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.simulation_run">(pathpy.processes.random_walk.RandomWalk method)</a>
+</li>
+      </ul></li>
       <li><a href="generated/pathpy.algorithms.shortest_paths.single_source_shortest_paths.html#pathpy.algorithms.shortest_paths.single_source_shortest_paths">single_source_shortest_paths() (in module pathpy.algorithms.shortest_paths)</a>
 </li>
       <li><a href="generated/pathpy.Path.start.html#pathpy.Path.start">start() (pathpy.Path property)</a>
 </li>
-      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.state_to_color">state_to_color() (pathpy.processes.random_walk.RandomWalk method)</a>
+      <li><a href="generated/pathpy.processes.epidemic_spreading.EpidemicSIR.html#pathpy.processes.epidemic_spreading.EpidemicSIR.state_to_color">state_to_color() (pathpy.processes.epidemic_spreading.EpidemicSIR method)</a>
+
+      <ul>
+        <li><a href="generated/pathpy.processes.process.BaseProcess.html#pathpy.processes.process.BaseProcess.state_to_color">(pathpy.processes.process.BaseProcess method)</a>
 </li>
-      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.stationary_state">stationary_state() (pathpy.processes.random_walk.RandomWalk method)</a>
+        <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.state_to_color">(pathpy.processes.random_walk.RandomWalk method)</a>
 </li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.step">step() (pathpy.processes.random_walk.RandomWalk method)</a>
+      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.stationary_state">stationary_state() (pathpy.processes.random_walk.RandomWalk method)</a>
 </li>
+      <li><a href="generated/pathpy.processes.epidemic_spreading.EpidemicSIR.html#pathpy.processes.epidemic_spreading.EpidemicSIR.step">step() (pathpy.processes.epidemic_spreading.EpidemicSIR method)</a>
+
+      <ul>
+        <li><a href="generated/pathpy.processes.process.BaseProcess.html#pathpy.processes.process.BaseProcess.step">(pathpy.processes.process.BaseProcess method)</a>
+</li>
+        <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.step">(pathpy.processes.random_walk.RandomWalk method)</a>
+</li>
+      </ul></li>
       <li><a href="generated/pathpy.statistics.subpaths.SubPathCollection.html#pathpy.statistics.subpaths.SubPathCollection">SubPathCollection (class in pathpy.statistics.subpaths)</a>
 </li>
       <li><a href="generated/pathpy.Network.successors.html#pathpy.Network.successors">successors() (pathpy.Network property)</a>
@@ -897,8 +995,14 @@
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.time">time() (pathpy.processes.random_walk.RandomWalk property)</a>
+      <li><a href="generated/pathpy.processes.epidemic_spreading.EpidemicSIR.html#pathpy.processes.epidemic_spreading.EpidemicSIR.time">time() (pathpy.processes.epidemic_spreading.EpidemicSIR property)</a>
+
+      <ul>
+        <li><a href="generated/pathpy.processes.process.BaseProcess.html#pathpy.processes.process.BaseProcess.time">(pathpy.processes.process.BaseProcess property)</a>
 </li>
+        <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.time">(pathpy.processes.random_walk.RandomWalk property)</a>
+</li>
+      </ul></li>
       <li><a href="generated/pathpy.io.pandas.to_dataframe.html#pathpy.io.pandas.to_dataframe">to_dataframe() (in module pathpy.io.pandas)</a>
 </li>
       <li><a href="generated/pathpy.io.pandas.to_network.html#pathpy.io.pandas.to_network">to_network() (in module pathpy.io.pandas)</a>
@@ -911,14 +1015,14 @@
 </li>
       <li><a href="generated/pathpy.Network.to_weighted_network.html#pathpy.Network.to_weighted_network">to_weighted_network() (pathpy.Network class method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/pathpy.Path.tolist.html#pathpy.Path.tolist">tolist() (pathpy.Path method)</a>
 
       <ul>
         <li><a href="generated/pathpy.statistics.subpaths.SubPathCollection.html#pathpy.statistics.subpaths.SubPathCollection.tolist">(pathpy.statistics.subpaths.SubPathCollection method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.total_variation_distance">total_variation_distance() (pathpy.processes.random_walk.RandomWalk property)</a>
 </li>
       <li><a href="generated/pathpy.algorithms.evaluation.train_test_split.html#pathpy.algorithms.evaluation.train_test_split">train_test_split() (in module pathpy.algorithms.evaluation)</a>
@@ -979,14 +1083,18 @@
 </li>
       <li><a href="generated/pathpy.statistics.subpaths.SubPathCollection.html#pathpy.statistics.subpaths.SubPathCollection.values">values() (pathpy.statistics.subpaths.SubPathCollection method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.visitation_frequencies">visitation_frequencies() (pathpy.processes.random_walk.RandomWalk property)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/pathpy.processes.random_walk.RandomWalk.html#pathpy.processes.random_walk.RandomWalk.visitation_probabilities">visitation_probabilities() (pathpy.processes.random_walk.RandomWalk method)</a>
 </li>
       <li><a href="generated/pathpy.processes.random_walk.VoseAliasSampling.html#pathpy.processes.random_walk.VoseAliasSampling">VoseAliasSampling (class in pathpy.processes.random_walk)</a>
+
+      <ul>
+        <li><a href="generated/pathpy.processes.sampling.VoseAliasSampling.html#pathpy.processes.sampling.VoseAliasSampling">(class in pathpy.processes.sampling)</a>
 </li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
